--- a/kashfeen.html
+++ b/kashfeen.html
@@ -9,8 +9,8 @@
       }
     </head>
     <body> 
-      <h1>Pasta </h1>
-      <h2>Alfredo Fettuccine  </h2>
+      <h1>About me! </h1>
+      <h2>Hi! I am Kashfeen Arshad, a high school senior passionate about data driven decisions and Machine learning.  </h2>
       <a href="https://tse4.mm.bing.net/th?id=OIP.hA7BHkd7MiTyM1K-e74iUAHaGe&rs=1&pid=ImgDetMain">Sup!!</a>      
     </body>
     <footer>
